--- a/package.json
+++ b/package.json
@@ -7,13 +7,22 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "es6": "babel demo/user.js -o demo/user-com.js"
   },
   "dependencies": {
     "animate.css": "^3.5.2",
     "axios": "^0.17.1",
+    "body-parser": "~1.16.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.0",
+    "ejs": "^2.5.6",
+    "express": "~4.14.1",
+    "jade": "~1.11.0",
     "d3": "^3.5.17",
     "mongoose": "^4.13.3",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.2",
     "stylus": "^0.54.5",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
@@ -34,9 +43,12 @@
     "css-loader": "^0.28.0",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^3.0.0",
+    "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "http-proxy-middleware": "^0.17.3",
     "webpack-bundle-analyzer": "^2.9.0",
     "node-notifier": "^5.1.2",
     "postcss-import": "^11.0.0",
